mise a jours du projet

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* change color of the font */
 body {
-    background-color: #fff;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: #cdc673;
+    font-family: Arial, sans-serif;
     text-align: center;
 }
 .profil {
